--- a/frontend_react/src/components/Login.css
+++ b/frontend_react/src/components/Login.css
@@ -3,9 +3,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top:50px;
+    height:83vh;    
 }
-
+form{
+    margin-top:40px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .login-container{
     display: flex;
     height:500px;
@@ -45,8 +51,8 @@
     padding-top:5px;
     padding-bottom:5px;
     border-radius: 5px;
+    border:none;
     background-color: blueviolet;
-    border-color: rgb(74, 6, 139);
 }
 
 .image-container{
