--- a/frontend_react/src/components/Login.css
+++ b/frontend_react/src/components/Login.css
@@ -5,6 +5,12 @@
     justify-content: center;
     height:83vh;    
 }
+.error{
+    color:red;
+    font-size: small;
+    margin:0;
+    padding:0;
+}
 form{
     margin-top:40px;
     display:flex;
